<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="321dp"
        android:layout_height="242dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35">

        <RadioButton
            android:id="@+id/prehistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pre_history_text" />

        <RadioButton
            android:id="@+id/classical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/classical_text" />

        <RadioButton
            android:id="@+id/middle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/middle_ages_text" />

        <RadioButton
            android:id="@+id/premodern"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/early_modern_text" />

        <RadioButton
            android:id="@+id/modern"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modern_text" />
    </RadioGroup>

    <Button
        android:id="@+id/accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept_time_period"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group"
        app:layout_constraintVertical_bias="0.534" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_time_period"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/radio_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.233" />
</androidx.constraintlayout.widget.ConstraintLayout>